# 3D-Model-Viewer

./: .editorconfig  .gitignore  CHANGELOG  CMakeCache.txt  CMakeLists.txt  LICENSE  build.bat  build.sh  details.md  readme.md
.github/workflows/: cmake-multi-platform.yml
include/: Camera.h  Clock.h  ImageTexture.h  Light.h  Material.h  ScreenManager.h  ShaderProg.h  Skybox.h  TriangleMesh.h
models/: Teapot.mtl
models/Bunny/: Bunny.mtl
models/ColorCube/: ColorCube.mtl
models/Ferrari/: Ferrari.mtl
models/Forklift/: Forklift.mtl
models/Gengar/: Gengar.mtl
models/Ivysaur/: Ivysaur.mtl
models/Koffing/: Koffing.mtl
models/MagikarpF/: MagikarpF.mtl
models/Pillows/: Pillows.mtl
models/Rose/: Rose.mtl
models/Slowbro/: Slowbro.mtl
models/Soccer/: Soccer.mtl
shaders/: face_culling.gs  fixed_color.vs  gouraud_shading_demo.fs  gouraud_shading_demo.vs  phong_shading_demo.fs  phong_shading_demo.vs  skybox.fs  skybox.vs  vis_normal.fs  vis_normal.vs
src/: CG2023_HW.cpp  Camera.cpp  Camera.h  Clock.cpp  ImageTexture.cpp  Light.h  Material.h  ScreenManager.cpp  ScreenManager.h  ShaderProg.cpp  ShaderProg.h  Skybox.cpp  TriangleMesh.cpp  TriangleMesh.h
